# Eurydice

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
include/eurydice/: defs.h  eury_config.h  eurydice.h
include/eurydice/system/: eury_config.h  init.h
src/demo/: main.c
src/eurydemo/: main.c
src/eurydice/: eury_config.c  eurydice.c
src/eurydice/system/: eury_config.c  init.c
